apps/minio/base/gateway/minio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
spec:
  parentRefs:
  - name: minio-gateway
  hostnames:
  - "minio.krabi.local"
  rules:
  - backendRefs:
    - name: minio
      port: 9001
