apps/minio/base/gateway/s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-route
spec:
  parentRefs:
  - name: minio-gateway
  hostnames:
  - "*.s3.krabi.local"
  rules:
  - backendRefs:
    - name: minio
      port: 9000
